# MedV4D

./: .gitmodules  CMakeLists.txt
Applications/Hmira/: CMakeLists.txt  OpenMeshX.h  compute_components.h  main.cpp  mesh.cpp  mesh.h  traits.h  winged_edge.h
Applications/Viewer/: AdditionalDatasetOptions.cpp  AdditionalDatasetOptions.h  AdditionalDatasetOptions.ui  CMakeLists.txt  DatasetManager.cpp  DatasetManager.hpp  DatasetManagerWidget.cpp  DatasetManagerWidget.hpp  DatasetManagerWidget.ui  EigenvaluesFilterPolicies.h  ExtendedViewerControls.cpp  ExtendedViewerControls.hpp  ExtendedViewerControls.ui  FilteringDialogBase.h  FranghisVesselnessOptions.cpp  FranghisVesselnessOptions.h  FranghisVesselnessOptions.ui  ItkEigenvalues.h  ItkFiltering.h  ItkUtils.cpp  ItkUtils.hpp  JoyInput.cpp  LinearCombinationOptions.cpp  LinearCombinationOptions.h  LinearCombinationOptions.ui  Statistics.hpp  ViewerModule.hpp  ViewerWindow.cpp  ViewerWindow.hpp  ViewerWindow.ui  main.cpp
Applications/tools/: CMakeLists.txt  CannyEdgeDetector.cpp  CudaFilters.cpp  CudaFilters.cu  Filtering.h  ImageCrop.cpp  ImageDump2Picture.cpp  ImageDumpView.cpp  Makefile  MaxFilter.cpp  MedianFilter.cpp  SobelEdgeDetector.cpp  VRT2ImageDump.cpp  __FilterExample.cpp
MedV4D/: CMakeLists.txt
MedV4D/include/: config.h
MedV4D/src/: todo.txt
cmake_project/Applications/: CMakeLists.txt
cmake_project/tests/: CMakeLists.txt
src/: CMakeLists.txt  prezentace.txt  releaseNotes.html  todo.txt
src/Applications/: Makefile
src/Common/: CMakeLists.txt  Debug.cpp  Functors.cpp  Log.cpp  PythonInterpreter.cpp  Thread.cpp  TimeStamp.cpp  fileAccessor.cpp  perfCounter.cpp
src/DICOMInterface/: CMakeLists.txt  DicomAssoc.cpp  DicomObj.cpp  FindService.cpp  LocalService.cpp  MoveService.cpp  StoreService.cpp
src/DataStorage/: Bitmap.h  M4DCrossPServerSock.cpp  M4DCrossPServerSock.h  dbConnector.h  main.c  main.cpp  perConnThread.cpp  perConnThread.h  readme.txt  server.cpp  server.h
src/GUI/: CMakeLists.txt  Makefile  main.cpp  ui_browser.h
src/Imaging/: ADataset.cpp  ADataset.h  AFilter.cpp  AFilter.h  AGeometryDataSet.h  AGeometryDataSet2D.h  AGeometryDataset.h  AGeometryDataset2D.h  AImage.h  AImage2DFilter.h  AImage2DFilter.tcc  AImageData.cpp  AImageData.h  AImageElementFilter.h  AImageFilterWholeAtOnce.tcc  AImageRegion.h  AImageSliceFilter.h  AImageSliceFilter.tcc  AMultiImageFilter.h  AProcessingUnit.h  AbstractDataSet.cpp  AbstractDataSet.h  AbstractFilter.cpp  AbstractFilter.h  AbstractGenericImageFilter.h  AbstractGenericImageFilter.tcc  AbstractImage.cpp  AbstractImage2DFilter.h  AbstractImage2DFilter.tcc  AbstractImageData.cpp  AbstractImageData.h  AbstractImageElementFilter.h  AbstractImageElementFilter.tcc  AbstractImageFilter.cpp  AbstractImageFilter.h  AbstractImageFilter.tcc  AbstractImageFilterWholeAtOnce.h  AbstractImageFilterWholeAtOnce.tcc  AbstractImageFilters.cpp  AbstractImageFilters.h  (+84 more)
src/Test/: Makefile  SnakeTest.cpp  SnakeTest2.cpp  SplineTest.cpp  plotcommands
src/backendForDICOM/: AbstractService.cpp  AbstractService.h  DICOMServiceProvider.cpp  DICOMServiceProvider.h  DICOMSupport.h  DcmObject.h  DcmProvider.cpp  DcmProvider.h  DicomAssoc.cpp  DicomAssoc.h  DicomObj.cpp  FilterSerializerArray.cpp  FindService.cpp  FindService.h  FromStreamConverter.h  LocalService.cpp  LocalService.h  M4DDICOMServiceProvider.cpp  M4DDicomAssoc.cpp  M4DDicomAssoc.h  Makefile  MoveService.cpp  MoveService.h  StoreService.cpp  StoreService.h  dicomDataStreamDecoder.h  main.cpp  main.h  remoteFilterBase.cpp  structures.h
src/cell/: Makefile
src/cellClient/: CellClient.cpp  CellClient.hpp  clientJob.cpp  clientJob.h  clientSocket.cpp  remoteFilterBase.cpp  serverConn.cpp  serverConn.h
src/cellServer/: clientConn.cpp  clientConn.h  jobManager.h  main.cpp  readme.txt  server.cpp  server.h  serverJob.cpp  serverJob.h
src/cmake_candidate/: CMakeLists.txt  FindDCMTKForM4D.cmake  FindPackages.cmake  FindQt4ForM4D.cmake  FindVTKForM4D.cmake  Functions.cmake  SourcesManagement.cmake  Tutorial.txt
src/cmake_project/: CMakeLists.txt  Tutorial.txt
src/common/: BasicJob.cpp  Box.h  Color.h  Common.cpp  Common.h  Debug.cpp  Debug.h  DefinitionMacros.h  Direction.h  Endianess.h  ExceptionBase.cpp  ExceptionBase.h  FStreams.h  FilterSerializerArray.cpp  Functors.h  GeometricAlgorithms.h  GeometricPrimitives.h  IOStreams.cpp  IOStreams.h  Log.cpp  Log.h  M4DByteConverter.cpp  M4DCrossPClientSocket.cpp  M4DCrossPlatformSocket.cpp  Makefile  MathTools.h  OGLTools.h  Octree.h  ProgressNotifier.h  Quaternion.h  Sphere.h  StringTools.h  Thread.cpp  Thread.h  TimeMeasurement.h  TimeStamp.cpp  TimeStamp.h  TypeComparator.h  TypeTraits.h  Types.h  (+4 more)
src/dataModifier/: dictionary.cpp  dictionary.h  entities.h  entryContainer.cpp  entryContainer.h  main.cpp
src/executables/: cellServers.cfg  config.cfg
src/include/: AbstractImage.h  AbstractImageData.h  AbstractImageFilter.h  AbstractProcessingUnit.h  Common.h  Coordinates.h  DataConversion.h  Debug.h  Endianess.h  ExceptionBase.h  Functors.h  Image.h  ImageDataTemplate.h  ImageDataTemplate.tcc  ImageFactory.h  ImageFactory.tcc  Imaging.h  Log.h  M4DByteConverter.h  M4DCommon.h  M4DCrossPClientSocket.h  M4DCrossPlatformSocket.h  M4DTransportDefs.h  Serializer.h  Thread.h  TimeStamp.h  Types.h  Vector.h  backendForDICOM.h  dicomConn.h  m4dAbstractFilter.h  m4dAbstractReader.h  m4dAbstractWriter.h  m4dCell.h  m4dCell.tcc  m4dCellIterator.h  m4dCellIterator.tcc  m4dDataObject.h  m4dDataSet.h  m4dDataSet.tcc  (+5 more)
src/itkIntegration/: conversions.h  dicomReader.h  itkFilter.h  itkImageWrapper.h
src/lib/: dicomClientWin.lib
src/project/: CMakeLists.txt  Makefile  Medv4d.sln  ToolchainSelect.mk  configurationSelector.mk  pathsDefinitions.mk
src/project_cmake/: CMakeLists.txt  FindVTK.cmake
src/project_vs08/: Medv4d.sln
src/remoteComp/: commandsEnum.h  filterIDEnums.h  iRemoteFilterProperties.h  netAccessor.h  netCommons.h  remoteFilter.h
src/vtkIntegration/: DataConversion.cpp  DataConversion.h  Makefile  m4dCompatibilityAgregation.h  m4dImageDataSource.cpp  (+1 more)
(+2489 files in other folders)
