CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT( M4DViewer )

#On windows
#SET(CMAKE_PREFIX_PATH "D:/Libs/Qt/Qt5.1.1/5.1.1/msvc2012_64_opengl" "c:/Program Files (x86)/Windows Kits/8.0/Lib/win8/um/x64/")

IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/MedV4D" )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)

IF(NOT MEDV4D_CMAKE_MODULES_DIR )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_ROOT_DIRECTORY}/../cmake_project/Modules)
	SET(CMAKE_MODULE_PATH "${MEDV4D_CMAKE_MODULES_DIR}" "${CMAKE_ROOT}/Modules" )
ENDIF(NOT MEDV4D_CMAKE_MODULES_DIR )


SET( MEDV4D_ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/MedV4D )
SET( MEDV4D_LIB_OUTPUT_DIRECTORY ${MEDV4D_ROOT_DIRECTORY}/lib )
SET( MEDV4D_EXECUTABLES_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/executables )


INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/SetupOutputPrefixAndPostfix.cmake" )

ADD_SUBDIRECTORY( MedV4D )
ADD_SUBDIRECTORY( Applications/Viewer )
#ADD_SUBDIRECTORY( Applications/tools )
ADD_DEPENDENCIES( Viewer MedV4D )
#ADD_DEPENDENCIES( CudaFilters MedV4D )
