CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( MedV4D )


#Initialization of mandary dirs
IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)

IF(NOT MEDV4D_CMAKE_MODULES_DIR )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_ROOT_DIRECTORY}/../cmake_project/Modules)
	SET(CMAKE_MODULE_PATH "${MEDV4D_CMAKE_MODULES_DIR}" "${CMAKE_ROOT}/Modules" )
ENDIF(NOT MEDV4D_CMAKE_MODULES_DIR )
#---------------------------------------

IF(WIN32)
	IF( CMAKE_CL_64 )
		SET( ARCH_POSTFIX "w64" )
	ELSE( CMAKE_CL_64 )
		SET( ARCH_POSTFIX "w32" )
	ENDIF( CMAKE_CL_64 )
ELSE(WIN32)
	SET( ARCH_POSTFIX ${CMAKE_SYSTEM_PROCESSOR} )
ENDIF(WIN32)

SET( MEDV4D_DEBUG_POSTFIX "_${ARCH_POSTFIX}d" )
SET( MEDV4D_RELEASE_POSTFIX "_${ARCH_POSTFIX}" )
SET( MEDV4D_LIBRARY_PREFIX "M4D_" )
SET( MEDV4D_PLATFORM_LIBRARY_PREFIX "lib${MEDV4D_LIBRARY_PREFIX}" )
#---------------------------------------

SET( MEDV4D_INCLUDE_DIR "${MEDV4D_ROOT_DIRECTORY}/include" )


INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/StandardCompileOptions.cmake" )
INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/MedV4DAdditionalLibs.cmake" )

INCLUDE_DIRECTORIES( ${MEDV4D_INCLUDE_DIR} "${MEDV4D_ROOT_DIRECTORY}/include/3rdParty" ${INCLUDE_DIRS_3RD_PARTY} )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${MEDV4D_ROOT_DIRECTORY}/lib" )
SET( MEDV4D_GENERATED_HEADERS_DIR "${MEDV4D_ROOT_DIRECTORY}/include/MedV4D/generated" )


ADD_SUBDIRECTORY( src/Common )
ADD_SUBDIRECTORY( src/Imaging )
ADD_SUBDIRECTORY( src/DICOMInterface )
ADD_SUBDIRECTORY( src/GUI )
