CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0017 NEW)
PROJECT( MedV4D )


#Initialization of mandatory dirs
IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)

IF(NOT MEDV4D_CMAKE_MODULES_DIR )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_ROOT_DIRECTORY}/../cmake_project/Modules)
	SET(CMAKE_MODULE_PATH "${MEDV4D_CMAKE_MODULES_DIR}" "${CMAKE_ROOT}/Modules" )
ENDIF(NOT MEDV4D_CMAKE_MODULES_DIR )

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)
#---------------------------------------

INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/SetupOutputPrefixAndPostfix.cmake" )
#---------------------------------------

SET( MEDV4D_INCLUDE_DIR "${MEDV4D_ROOT_DIRECTORY}/include" )


INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/StandardCompileOptions.cmake" )
INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/MedV4DAdditionalLibs.cmake" )

INCLUDE_DIRECTORIES( ${MEDV4D_INCLUDE_DIR} "${MEDV4D_ROOT_DIRECTORY}/include/3rdParty" ${INCLUDE_DIRS_3RD_PARTY} )
#SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${MEDV4D_ROOT_DIRECTORY}/lib" )
SET( MEDV4D_GENERATED_HEADERS_DIR "${MEDV4D_ROOT_DIRECTORY}/include/MedV4D/generated" )


ADD_SUBDIRECTORY( src/Common )
ADD_SUBDIRECTORY( src/Imaging )
ADD_SUBDIRECTORY( src/DICOMInterface )
ADD_SUBDIRECTORY( src/GUI )
