CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( MedV4D )

IF(NOT MEDV4D_CMAKE_SOURCE_DIR)
	SET(MEDV4D_CMAKE_SOURCE_DIR "${CMAKE_SOURCE_DIR}" )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_CMAKE_SOURCE_DIR}/cmake_project/Modules)
	SET(CMAKE_MODULE_PATH "${MEDV4D_CMAKE_MODULES_DIR}" "${CMAKE_ROOT}/Modules" )
ENDIF(NOT MEDV4D_CMAKE_SOURCE_DIR)

IF(WIN32)
	IF( CMAKE_CL_64 )
		SET( ARCH_POSTFIX "w64" )
	ELSE( CMAKE_CL_64 )
		SET( ARCH_POSTFIX "w32" )
	ENDIF( CMAKE_CL_64 )
ELSE(WIN32)
	SET( ARCH_POSTFIX ${CMAKE_SYSTEM_PROCESSOR} )
ENDIF(WIN32)

SET( MEDV4D_DEBUG_POSTFIX "_${ARCH_POSTFIX}d" )
SET( MEDV4D_RELEASE_POSTFIX "_${ARCH_POSTFIX}" )


INCLUDE_DIRECTORIES( "../include" )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "../lib" )


INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/StandardCompileOptions.cmake" )
INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/FindPackages.cmake" )


ADD_SUBDIRECTORY( Common )
ADD_SUBDIRECTORY( Imaging )
ADD_SUBDIRECTORY( DICOMInterface )
ADD_SUBDIRECTORY( GUI )
