#
# nešlo vygenerovať
#
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

ADD_DEFINITIONS("-std=c++0x")

PROJECT ( Hmira )

IF( EXTENSION_MODULES_ENABLED )
	SET( EXTENSION_HEADERS
		"concepts/iterable_vertices.h"
		"concepts/mesh.h"
		"concepts/vertex_adjacency.h"
		)
ENDIF( EXTENSION_MODULES_ENABLED )

SET( HMIRA_HEADERS 
	"meshes/OpenMeshX.h"
	"meshes/winged_edge.h" )

FIND_LIBRARY( OPENMESH_CORE_DEBUG_LIB OpenMeshCored ) #PATHS "opt/lib/OpenMesh")
FIND_LIBRARY( OPENMESH_CORE_RELEASE_LIB OpenMeshCore )
SET( OPENMESH_CORE_LIB "debug" ${OPENMESH_CORE_DEBUG_LIB} "optimized" ${OPENMESH_CORE_RELEASE_LIB} )

FIND_PATH( OPENMESH_INCLUDE_DIR "OpenMesh/Core/Geometry/VectorT.hh" )

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${OPENMESH_INCLUDE_DIR} )

ADD_EXECUTABLE( main "main.cpp" ${HMIRA_HEADERS} ${EXTENSION_HEADERS} )
TARGET_LINK_LIBRARIES( main ${OPENMESH_CORE_LIB} )

