CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)
PROJECT( Tools )

IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../MedV4D" )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)

IF(NOT MEDV4D_CMAKE_MODULES_DIR )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_ROOT_DIRECTORY}/../cmake_project/Modules)
	SET(CMAKE_MODULE_PATH "${MEDV4D_CMAKE_MODULES_DIR}" "${CMAKE_ROOT}/Modules" )
ENDIF(NOT MEDV4D_CMAKE_MODULES_DIR )

FIND_PACKAGE( MedV4D REQUIRED )


#SET(EXECUTABLE_OUTPUT_PATH ${MEDV4D_CMAKE_SOURCE_DIR}/../executables/tools)

#SET(TOOLS_SRC_DIR "${MEDV4D_CMAKE_SOURCE_DIR}/../Applications/tools")

SET(EXECUTABLE_OUTPUT_PATH ${MEDV4D_EXECUTABLES_OUTPUT_DIRECTORY}/tools )

INCLUDE_DIRECTORIES( ${MEDV4D_INCLUDE_DIR} ${MEDV4D_INCLUDE_DIRS_3RD_PARTY} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )
INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/StandardCompileOptions.cmake" NO_POLICY_SCOPE)


ADD_MEDV4D_EXECUTABLE( CudaFilters SOURCES "CudaFilters.cpp" HEADERS  UIS  )
TARGET_LINK_LIBRARIES( CudaFilters ${MEDV4D_LIBRARIES} ${MEDV4D_LIBRARIES_3RD_PARTY} )

