CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( MEDV4D_TESTS )

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(NOT MEDV4D_CMAKE_SOURCE_DIR)
	SET(MEDV4D_CMAKE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/.." )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_CMAKE_SOURCE_DIR}/Modules)
	SET(CMAKE_MODULE_PATH "${MEDV4D_CMAKE_MODULES_DIR}" "${CMAKE_ROOT}/Modules" )
ENDIF(NOT MEDV4D_CMAKE_SOURCE_DIR)

INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/Functions.cmake" )
INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/FindPackages.cmake" )
INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/StandardCompileOptions.cmake" )

#Mandatory -- prevents adding targets for Medv4DLibs more than once 
IF(NOT MEDV4D_LIBS_CMAKE_PROCESSED)
	ADD_SUBDIRECTORY( "${MEDV4D_CMAKE_SOURCE_DIR}/Medv4DLibs" "${MEDV4D_CMAKE_SOURCE_DIR}/../tmp" )
	#Must propagate to parent scope
	SET( MEDV4D_LIBS_CMAKE_PROCESSED TRUE PARENT_SCOPE )
ENDIF(NOT MEDV4D_LIBS_CMAKE_PROCESSED)

SET(EXECUTABLE_OUTPUT_PATH ${MEDV4D_CMAKE_SOURCE_DIR}/../executables/tests)

SET(TEST_SOURCE_DIR "${MEDV4D_CMAKE_SOURCE_DIR}/../tests" )

#SET_DIRECTORY_PROPERTIES(EXCLUDE_FROM_ALL)

TARGET_MEDV4D_PROGRAM( SliceViewerTest ${TEST_SOURCE_DIR}/SliceViewerTest )
TARGET_MEDV4D_PROGRAM( GLThreadedWidget ${TEST_SOURCE_DIR}/GLThreadedWidget )
TARGET_MEDV4D_PROGRAM( VolumeViewer ${TEST_SOURCE_DIR}/VolumeViewer )
TARGET_MEDV4D_PROGRAM( Sample3DViewer ${TEST_SOURCE_DIR}/Sample3DViewer )
TARGET_MEDV4D_PROGRAM( GUITest ${TEST_SOURCE_DIR}/GUI )

