CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(GUI)

SET( MEDV4D_GUI_INCLUDE_DIR "../../include/MedV4D/GUI" )
SET( MEDV4D_GUI_SOURCE_DIR "." )
SET( MEDV4D_GUI_WIDGETS_INCLUDE_DIR "${MEDV4D_GUI_INCLUDE_DIR}/widgets" )
SET( MEDV4D_GUI_WIDGETS_SOURCE_DIR "${MEDV4D_GUI_SOURCE_DIR}/widgets" )
SET( MEDV4D_GENERATED_HEADERS "../../include/generated" )


INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/Functions.cmake" )

SET( GUI_WIDGETS_HEADERS
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ADesktopContainer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ADesktop.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AGLViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AGUIViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AViewerContainer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/BasicSliceViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ColorChooserButton.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/Desktop.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GeneralViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GLThreadedWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GLWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GridDesktop.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/MainWindow.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/MultiDockWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ProgressInfoDialog.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/PythonTerminal.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ScaleVisualizer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/SettingsDialog.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/SettingsDialog.ui"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/Simple2DViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/SimpleVolumeViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/TerminalWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/TransferFunction1DEditor.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/Viewer2DWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ViewerConstructionKit.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ViewerControls.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ViewerDesktop.h"
	)

SET( GUI_WIDGETS_UIS
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ProgressInfoDialog.ui"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/SettingsDialog.ui"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ViewerControls.ui"
	)

SET( GUI_WIDGETS_SOURCES
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/AGLViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/AViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/BasicSliceViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/Desktop.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/GeneralViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/GLThreadedWidget.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/GridDesktop.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/MainWindow.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ScaleVisualizer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/TransferFunction1DEditor.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ViewerDesktop.cpp"
	)

M4D_QT4_WRAP_UI( GUI_WIDGETS_UIS_HEADERS ${GUI_WIDGETS_UIS} )
MESSAGE( "----------------${GUI_WIDGETS_UIS_HEADERS}" )

SOURCE_GROUP( Headers FILES ${GUI_WIDGETS_HEADERS} )
SOURCE_GROUP( Sources FILES ${GUI_WIDGETS_SOURCES} )

ADD_LIBRARY( GUI ${GUI_WIDGETS_HEADERS} ${GUI_WIDGETS_SOURCES} ${GUI_WIDGETS_UIS} )
SET_TARGET_PROPERTIES( GUI PROPERTIES DEBUG_POSTFIX ${MEDV4D_DEBUG_POSTFIX} )
SET_TARGET_PROPERTIES( GUI PROPERTIES RELEASE_POSTFIX ${MEDV4D_RELEASE_POSTFIX} )
