#MedV4D Project "solution"

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MEDV4D)

IF(NOT MEDV4D_CMAKE_SOURCE_DIR)
	SET(MEDV4D_CMAKE_SOURCE_DIR "${CMAKE_SOURCE_DIR}" )
	SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_CMAKE_SOURCE_DIR}/Modules)
ENDIF(NOT MEDV4D_CMAKE_SOURCE_DIR)

ADD_SUBDIRECTORY(Medv4DLibs)
ADD_SUBDIRECTORY(Applications)
#ADD_SUBDIRECTORY(tests)


