#MedV4D Project "solution"

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MEDV4D)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../executables)

SET(QT_USE_QTOPENGL 1)

FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system thread)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)

#override system cmake modules by our versions
SET(CMAKE_MODULE_PATH "../project_cmake") 

FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(DCMTK REQUIRED)

IF(WIN32)
  SET(CMAKE_CXX_FLAGS "-DDEBUG_LEVEL=10 -DDEBUG_ADITIONAL_INFO")
ELSE(WIN32)
  SET(CMAKE_CXX_FLAGS "-ggdb -Wall -Wno-deprecated -DDCOMPAT_H -DHAVE_CONFIG_H -DHAVE_SSTREAM -DDEBUG_LEVEL=10 -DDEBUG_ADITIONAL_INFO")
ENDIF(WIN32)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(backendForDICOM)
ADD_SUBDIRECTORY(Imaging)
ADD_SUBDIRECTORY(m4dWidgets)
ADD_SUBDIRECTORY(vtkIntegration)

ADD_SUBDIRECTORY(m4dPilot)

