#MedV4D Project "solution"

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MEDV4D)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../executables)
SET(CMAKE_DEBUG_POSTFIX, "d") 

SET(QT_USE_QTOPENGL 1)

FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system thread)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(VTK REQUIRED)

IF(WIN32)
  SET(DCMTK_LIBRARY_DIRS "../../lib/dcmtkLibs")
  SET(DCMTK_INCLUDE_DIRS "../../include/dcmtk")
ELSE(WIN32)
  FIND_PACKAGE(DCMTK REQUIRED)
ENDIF(WIN32)

IF(WIN32)
  SET(CMAKE_CXX_FLAGS "/MT /EHsc -DDEBUG_LEVEL=10 -DDEBUG_ADITIONAL_INFO")
ELSE(WIN32)
  SET(CMAKE_CXX_FLAGS "-ggdb -Wall -Wno-deprecated -DDCOMPAT_H -DHAVE_CONFIG_H -DHAVE_SSTREAM -DDEBUG_LEVEL=10 -DDEBUG_ADITIONAL_INFO")
ENDIF(WIN32)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(backendForDICOM)
ADD_SUBDIRECTORY(Imaging)
ADD_SUBDIRECTORY(m4dWidgets)
ADD_SUBDIRECTORY(vtkIntegration)

ADD_SUBDIRECTORY(m4dPilot)

