CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(Common)

IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../.." )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)
IF( NOT MEDV4D_INCLUDE_DIR )
	SET(MEDV4D_INCLUDE_DIR "${MEDV4D_ROOT_DIRECTORY}/include" )
ENDIF( NOT MEDV4D_INCLUDE_DIR )

SET( MEDV4D_COMMON_INCLUDE_DIR "${MEDV4D_INCLUDE_DIR}/MedV4D/Common" )
SET( MEDV4D_COMMON_SOURCE_DIR "." )

SET( COMMON_HEADERS
	"${MEDV4D_COMMON_INCLUDE_DIR}/Box.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Color.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Common.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/ConceptChecking.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Debug.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/DefinitionMacros.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Direction.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Endianess.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/ExceptionBase.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/fileAccessor.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/FStreams.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Functors.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/GeometricAlgorithms.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/GeometricPrimitives.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/GraphTools.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/IDGenerator.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/IOStreams.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Log.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/MathTools.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/mediumAccessor.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Octree.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/ParameterSet.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/perfCounter.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/ProgressNotifier.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/PythonInterpreter.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Quaternion.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/RAII.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Sphere.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/StringTools.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Thread.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/TimeMeasurement.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/TimeStamp.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/TypeComparator.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Types.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/TypeTraits.h"
	"${MEDV4D_COMMON_INCLUDE_DIR}/Vector.h"
	)

SET( COMMON_SOURCES
	"${MEDV4D_COMMON_SOURCE_DIR}/Common.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/Debug.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/ExceptionBase.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/fileAccessor.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/Functors.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/GraphTools.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/IDGenerator.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/IOStreams.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/Log.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/perfCounter.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/PythonInterpreter.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/Thread.cpp"
	"${MEDV4D_COMMON_SOURCE_DIR}/TimeStamp.cpp"
	)

SOURCE_GROUP( Headers FILES ${COMMON_HEADERS} )
SOURCE_GROUP( Sources FILES ${COMMON_SOURCES} )

ADD_LIBRARY( Common ${COMMON_HEADERS} ${COMMON_SOURCES} )
SET_TARGET_PROPERTIES( Common PROPERTIES DEBUG_POSTFIX ${MEDV4D_DEBUG_POSTFIX} ) 
SET_TARGET_PROPERTIES( Common PROPERTIES RELEASE_POSTFIX ${MEDV4D_RELEASE_POSTFIX} )
SET_TARGET_PROPERTIES( Common PROPERTIES PREFIX ${MEDV4D_PLATFORM_LIBRARY_PREFIX} )
SET_TARGET_PROPERTIES( Common PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
SET_TARGET_PROPERTIES( Common PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
IF(WIN32)
	SET_TARGET_PROPERTIES( Common PROPERTIES STATIC_LIBRARY_FLAGS /NODEFAULTLIB)
ENDIF(WIN32)
